--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </head>
 <body>
     <div class="wrap-all">
-        <p class="play-time">게임 시간 : 0</p>
+        <h1>Puzzle</h1>
+        <p class="play-time">Game Time : 0</p>
         <ul class="image-container">
         </ul>
         <button class="start-button">Start</button>
